* Issues with Jalalijscalendar button in forms. (stranger)
* Issue with upgrader, blocks got twice inserted. (stranger)
* Issue with upgrader, blocks permissions were not inserted. (skenow/stranger)
* Issue with upgrader, system sub-module permissions were not inserted. (stranger)
* Issue with theme_rtl. (stranger)
* Issue with <{if $xoops_contents}>. (stranger)

===2008-09-21 : 1.1 RC 2===

'''Added'''
* Adding movie filter in HTMLPurifier for Liveleak movies (vaughan)
* Adding movie filter in HTMLPurifier for vimeo movies (vaughan)
* Adding IcmsSecureForm to create IcmsPersistable object form with a seucirty token. We will recommend to always use this within the IcmsPersistable Framework when not on the admin side (malanciault)
* Added option to select calendar type for forms. (stranger)
* Updated system to version 1.05. (stranger)

'''Improved'''
* Rendering of Google Analytics script and new script source from Google (skenow)

'''Fixed'''
* Warning: Value for HTML. Trusted is of invalid type, should be bool in file /libraries/htmlpurifier/HTMLPurifier.standalone.php line 1447 (vaughan)
* In HTMLPurifier $is_admin wasn't defined if $xoopsUser wasn't an existing object.(vaughan)
* In HTMPPurifier $xoopsUser undefined variable on line 130 (vaughan)
* Wrong smarty variable name in IcmsPersistableController::handleObjectDeletionFromUserSide() (malanciault)
* In IcmsDatabaseUpdater::upgradeObjectItem() when a TEXT field was created, a default value was set which is wrong. TEXT field can't have default value (malanciault)
* Closed comment tag in include/calendarjs.php that created a problem with IE (skenow)
* Undefined variable: ret in file /kernel/icmspersistablecontroller.php line 462 (malanciault)
* #2115835: Typo when checking if openid field existed in database update version 3 (malanciault)
* When the deafault selected theme was suddenly removed, blank page appeared. (stranger)
* Using impresstheme instead of default. (stranger)